primitives/tests/ui_fail/fix_num_private.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
  --> tests/ui_fail/fix_num_private.rs:4:20
   |
4  |     let quantity = Fixed(FixNum::try_from(-123.45_f64).unwrap());
   |                    ^^^^^
   |
note: constructor is not visible here due to private fields
  --> src/fixed.rs
   |
   | pub struct Fixed(FixNum);
   |                  ^^^^^^ private field
